完成：輪播、首頁顏色、按鈕調整

--- a/stylesheets/helpers/_variables.scss
+++ b/stylesheets/helpers/_variables.scss
@@ -1102,7 +1102,7 @@ $nav-link-padding-y: 0.5rem !default;
 $nav-link-padding-x: 1rem !default;
 $nav-link-font-size: null !default;
 $nav-link-font-weight: null !default;
-$nav-link-color: $white !default;
+$nav-link-color: $black !default;
 $nav-link-hover-color: $nbaRed !default;
 $nav-link-transition: color 0.15s ease-in-out,
   background-color 0.15s ease-in-out, border-color 0.15s ease-in-out !default;
