--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -17,39 +17,27 @@
     background-color: #fff;
   }
   h1 {
-    color: $white;
+    color: $black !important;
     &:hover {
-      color: $nbaRed;
+      color: $nbaRed !important;
     }
   }
-  .navbar-nav a {
-    color: $white;
+  .navbar-nav .nav-link {
+    color: $black !important;
     font-weight: bold;
     &:hover {
-      color: $nbaRed;
+      color: $nbaRed !important;
     }
-  }
-  /* Grow Shadow */
-  .hvr-grow-shadow {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: box-shadow, transform;
-    transition-property: box-shadow, transform;
-  }
-  .hvr-grow-shadow:hover,
-  .hvr-grow-shadow:focus,
-  .hvr-grow-shadow:active {
-    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
   }
   :active {
     color: $nbaRed;
+  }
+  .navbar-nav .nav_pill {
+    color: #fff;
+    // 這邊特別要加& 不然會指一條直的陰影
+    &:hover {
+      box-shadow: 0 10px 1px rgba(0, 0, 0, 1);
+    }
   }
 }
 
@@ -161,65 +149,65 @@
 // }
 
 //3D按鈕
-$bg: #fff;
-$light-pink: #fff0f0;
-$text: #382b22;
-$pink: #ffe9e9;
-$dark-pink: #000;
-$pink-shadow: #000;
-$pink-border: none;
-button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  font-size: inherit;
-  font-family: inherit;
-  &.learn-more {
-    font-weight: 600;
-    color: $text;
-    text-transform: uppercase;
-    padding: 1.25em 2em;
-    background: $light-pink;
-    border: 2px solid $pink-border;
-    border-radius: 0.75em;
-    transform-style: preserve-3d;
-    transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-      background 150ms cubic-bezier(0, 0, 0.58, 1);
-    &::before {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: $dark-pink;
-      border-radius: inherit;
-      box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow;
-      transform: translate3d(0, 0.75em, -1em);
-      transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-        box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-    }
-    &:hover {
-      background: $pink;
-      transform: translate(0, 0.25em);
-      &::before {
-        box-shadow: 0 0 0 2px $pink-border, 0 0.5em 0 0 $pink-shadow;
-        transform: translate3d(0, 0.5em, -1em);
-      }
-    }
-    &:active {
-      background: $pink;
-      transform: translate(0em, 0.75em);
-      &::before {
-        box-shadow: 0 0 0 2px $pink-border, 0 0 $pink-shadow;
-        transform: translate3d(0, 0, -1em);
-      }
-    }
-  }
-}
+// $bg: #fff;
+// $light-pink: #fff0f0;
+// $text: #382b22;
+// $pink: #ffe9e9;
+// $dark-pink: #000;
+// $pink-shadow: #000;
+// $pink-border: none;
+// button {
+//   position: relative;
+//   display: inline-block;
+//   cursor: pointer;
+//   outline: none;
+//   border: 0;
+//   vertical-align: middle;
+//   text-decoration: none;
+//   font-size: inherit;
+//   font-family: inherit;
+//   &.learn-more {
+//     font-weight: 600;
+//     color: $text;
+//     text-transform: uppercase;
+//     padding: 1.25em 2em;
+//     background: $light-pink;
+//     border: 2px solid $pink-border;
+//     border-radius: 0.75em;
+//     transform-style: preserve-3d;
+//     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+//       background 150ms cubic-bezier(0, 0, 0.58, 1);
+//     &::before {
+//       position: absolute;
+//       content: "";
+//       width: 100%;
+//       height: 100%;
+//       top: 0;
+//       left: 0;
+//       right: 0;
+//       bottom: 0;
+//       background: $dark-pink;
+//       border-radius: inherit;
+//       transform: translate3d(0, 0.75em, -1em);
+//       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+//       box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+//     }
+//     &:hover {
+//       box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow;
+//       background: $pink;
+//       transform: translate(0, 0.25em);
+//       &::before {
+//         box-shadow: 0 0 0 2px $pink-border, 0 0.5em 0 0 $pink-shadow;
+//         transform: translate3d(0, 0.5em, -1em);
+//       }
+//     }
+//     &:active {
+//       background: $pink;
+//       transform: translate(0em, 0.75em);
+//       &::before {
+//         box-shadow: 0 0 0 2px $pink-border, 0 0 $pink-shadow;
+//         transform: translate3d(0, 0, -1em);
+//       }
+//     }
+//   }
+// }
