--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -59,7 +59,7 @@
 //學生pages
 @import "./pages/index";
 @import "./pages/allstar";
-@import "./pages/allstarList";
-@import "./pages/allstarListItem";
+@import "./pages/allstarStory";
+@import "./pages/allstarStoryItem";
 @import "./pages/newproduct";
 @import "./pages/customzied";
