--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -15,6 +15,9 @@
     border: 2px black solid;
     border-radius: 50%;
     background-color: #fff;
+    :hover h1 {
+      color: $nbaRed !important;
+    }
   }
   h1 {
     color: $black !important;
@@ -86,10 +89,9 @@
 }
 
 .rank_card {
-  // 連動hover 不用加& 但要用: 不能用. 也不用~
-  :hover .sell_more a {
-    font-weight: bold;
-    color: $nbaRed;
+  // 連動hover 前面不用& 但要用:不能用. 後面不能用 ~
+  :hover a {
+    color: $nbaBlue !important;
   }
   :hover .card {
     box-shadow: 0 20px 20px #dddd;
@@ -108,6 +110,24 @@
   :hover .img_back003 {
     background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
     background-position: center center;
+    background-size: cover;
+  }
+  //球星列表
+  :hover .img_back004 {
+    background-image: url(../../nbaWeb/PNG-images-NBA-Players-58png.png);
+    background-position: bottom center;
+    background-size: none;
+    background-repeat: no-repeat;
+  }
+  :hover .img_back005 {
+    background-image: url(../../nbaWeb/PNG-images-NBA-Players-60png.png);
+    background-position: bottom center;
+    background-size: fill;
+    background-repeat: no-repeat;
+  }
+  :hover .img_back006 {
+    background-image: url(../../nbaWeb/PNG-images-NBA-Players-70png.png);
+    background-position: bottom center;
     background-size: cover;
   }
   :hover .card-img-top {
@@ -142,72 +162,3 @@
   }
 }
 @include sellbtn_Rwd;
-// @include pc() {
-//   .sellbtn_Rwd {
-//     width: 100%;
-//   }
-// }
-
-//3D按鈕
-// $bg: #fff;
-// $light-pink: #fff0f0;
-// $text: #382b22;
-// $pink: #ffe9e9;
-// $dark-pink: #000;
-// $pink-shadow: #000;
-// $pink-border: none;
-// button {
-//   position: relative;
-//   display: inline-block;
-//   cursor: pointer;
-//   outline: none;
-//   border: 0;
-//   vertical-align: middle;
-//   text-decoration: none;
-//   font-size: inherit;
-//   font-family: inherit;
-//   &.learn-more {
-//     font-weight: 600;
-//     color: $text;
-//     text-transform: uppercase;
-//     padding: 1.25em 2em;
-//     background: $light-pink;
-//     border: 2px solid $pink-border;
-//     border-radius: 0.75em;
-//     transform-style: preserve-3d;
-//     transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-//       background 150ms cubic-bezier(0, 0, 0.58, 1);
-//     &::before {
-//       position: absolute;
-//       content: "";
-//       width: 100%;
-//       height: 100%;
-//       top: 0;
-//       left: 0;
-//       right: 0;
-//       bottom: 0;
-//       background: $dark-pink;
-//       border-radius: inherit;
-//       transform: translate3d(0, 0.75em, -1em);
-//       transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
-//       box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-//     }
-//     &:hover {
-//       box-shadow: 0 0 0 2px $pink-border, 0 0.625em 0 0 $pink-shadow;
-//       background: $pink;
-//       transform: translate(0, 0.25em);
-//       &::before {
-//         box-shadow: 0 0 0 2px $pink-border, 0 0.5em 0 0 $pink-shadow;
-//         transform: translate3d(0, 0.5em, -1em);
-//       }
-//     }
-//     &:active {
-//       background: $pink;
-//       transform: translate(0em, 0.75em);
-//       &::before {
-//         box-shadow: 0 0 0 2px $pink-border, 0 0 $pink-shadow;
-//         transform: translate3d(0, 0, -1em);
-//       }
-//     }
-//   }
-// }
