--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -49,7 +49,7 @@
   width: 100%;
   height: 810px;
 }
-@include pad() {
+@include maxpad() {
   .banner {
     height: 600px;
     background-position: top center;
