--- a/stylesheets/utils/_function.scss
+++ b/stylesheets/utils/_function.scss
@@ -1,23 +1,11 @@
-@mixin circle($size,$background) {
-    border-radius: 50%;
-    height: $size;
-    width: $size;
-    background-color: $background;
+@mixin circle($size, $background) {
+  border-radius: 50%;
+  height: $size;
+  width: $size;
+  background-color: $background;
 }
 
-// max
-@mixin pad() {
-  @media (max-width: 768px) {
-    @content;
-  }
-}
-@mixin pc() {
-  @media (max-width: 1040px) {
-    @content;
-  }
-}
-
-// min
+// min 大於最小的 的響應式
 @mixin minipad() {
   @media (min-width: 768px) {
     @content;
@@ -25,6 +13,22 @@
 }
 @mixin minipc() {
   @media (min-width: 1040px) {
+    @content;
+  }
+}
+// max 小於最大的 的響應式
+@mixin maxpad() {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
+@mixin maxpc() {
+  @media (max-width: 1040px) {
+    @content;
+  }
+}
+@mixin maxbigpc() {
+  @media (max-width: 1185px) {
     @content;
   }
 }
