--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -58,8 +58,8 @@
 
 //學生pages
 @import "./pages/index";
-@import "./pages/allstar";
-@import "./pages/allstarStory";
-@import "./pages/allstarStoryItem";
-@import "./pages/newproduct";
+@import "./pages/rank";
+@import "./pages/story";
+@import "./pages/storyItem";
+@import "./pages/product";
 @import "./pages/customzied";
