--- a/stylesheets/pages/_storyItem.scss
+++ b/stylesheets/pages/_storyItem.scss
@@ -13,7 +13,8 @@
     box-shadow: 0 20px 20px #dddd;
   }
   &:hover .btn-nbaBlue {
-    background-color: blue;
+    background-color: var(--bs-btn-active-bg);
+    border-color: var(--bs-btn-active-border-color);
   }
 }
 
