--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -8,51 +8,73 @@
 }
 
 .navbar {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 0 10px;
   .navbar-brand {
     @include hide_text;
     width: 50px;
     height: 50px;
-    border: 2px black solid;
-    border-radius: 50%;
-    background-color: #fff;
-    :hover h1 {
+    &:hover .nav_h1 {
       color: $nbaRed !important;
     }
   }
-  h1 {
-    color: $black !important;
+  .nav_h1 {
+    color: $black;
     &:hover {
-      color: $nbaRed !important;
+      color: $nbaRed;
     }
   }
   .navbar-nav .nav-link {
-    color: $black !important;
+    color: $black;
     font-weight: bold;
     &:hover {
-      color: $nbaRed !important;
+      color: $nbaRed;
     }
   }
   :active {
     color: $nbaRed;
   }
   .navbar-nav .nav_pill {
-    color: #fff;
-    // 這邊特別要加& 不然會指一條直的陰影
+    // 要加& 不然會指一條直的陰影 第一層不用加 第二層要加&
     &:hover {
-      box-shadow: 0 10px 1px rgba(0, 0, 0, 1);
+      box-shadow: 0 8px 1px rgba(0, 0, 0, 1);
     }
   }
 }
-
-.banner {
-  background-image: url(../../nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg);
-  width: 100%;
-  height: 810px;
+.nav_shadow {
+  // box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.6);
+  // 模糊值和擴散值 2 / -2就不會有x陰影
+  box-shadow: 0 2px 2px -2px gray;
 }
-@include maxpad() {
-  .banner {
-    height: 600px;
-    background-position: top center;
+
+//箭頭動畫
+.banner_arrow {
+  position: absolute;
+  bottom: 0;
+  left: 45%;
+  color: $white;
+  animation: banner_arrow 3s infinite;
+}
+@keyframes banner_arrow {
+  0% {
+    opacity: 0%;
+  }
+  25% {
+    opacity: 25%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  75% {
+    opacity: 75%;
+  }
+  100% {
+    opacity: 100%;
   }
 }
 
@@ -61,7 +83,7 @@
   height: 312px;
   position: absolute;
   border-radius: 3%;
-  color: white;
+  color: $white;
   padding-left: 10px;
   background-image: linear-gradient(180deg, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0.8));
   display: none;
@@ -80,7 +102,7 @@
     color: $nbaBlue !important;
   }
   :hover .card {
-    box-shadow: 0 20px 20px #dddd;
+    box-shadow: 0 20px 20px $shadow;
   }
   :hover .img_back001 {
     background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
@@ -122,7 +144,7 @@
   .img_back {
     width: 100%;
     height: 250px;
-    background-color: #fff;
+    background-color: $white;
     border-radius: 3%;
   }
   .card-text {
@@ -134,7 +156,7 @@
     display: box;
     -webkit-box-orient: vertical;
   }
-  a:after {
+  .rank_a:after {
     content: "";
     position: absolute;
     top: 90%;
@@ -142,9 +164,6 @@
     background: $gray-500;
     width: 80%;
     height: 1px;
-  }
-  :hover a {
-    color: $nbaRed;
   }
 }
 @include sellbtn_Rwd;
