--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -55,7 +55,7 @@
 //箭頭動畫
 .banner_arrow {
   position: absolute;
-  bottom: 0;
+  bottom: 5%;
   left: 45%;
   color: $white;
   animation: banner_arrow 3s infinite;
