--- a/stylesheets/pages/_rank.scss
+++ b/stylesheets/pages/_rank.scss
@@ -3,16 +3,13 @@
 @import "../helpers/variables";
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
+// 嘗試 背景圖如果只使用一次，可以使用 inline style 但會無法響應式 故需要 !important
 .allstar_banner {
-  background-image: url(../../nbaWeb/banner3.jpg);
-  width: 100%;
   height: 600px;
-  background-position: center center;
-  background-size: cover;
 }
 @include maxpad() {
   .allstar_banner {
-    background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg);
+    background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg) !important;
     width: 100%;
     height: 400px;
     background-position: top center;
