--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -42,14 +42,14 @@
   .navbar-nav .nav_pill {
     // 要加& 不然會指一條直的陰影 第一層不用加 第二層要加&
     &:hover {
-      box-shadow: 0 8px 1px rgba(0, 0, 0, 1);
+      box-shadow: 0 5px 1px rgba(0, 0, 0, 1);
     }
   }
 }
 .nav_shadow {
   // box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.6);
   // 模糊值和擴散值 2 / -2就不會有x陰影
-  box-shadow: 0 2px 2px -2px gray;
+  box-shadow: 0 2px 2px -2px $gray-500;
 }
 
 //箭頭動畫
@@ -104,36 +104,36 @@
   :hover .card {
     box-shadow: 0 20px 20px $shadow;
   }
-  :hover .img_back001 {
+  :hover .img_back_kobe {
     background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
     background-position: center center;
     background-size: cover;
   }
-  :hover .img_back002 {
+  :hover .img_back_lebron {
     background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
     background-position: center center;
     background-size: none;
     background-repeat: no-repeat;
   }
-  :hover .img_back003 {
+  :hover .img_back_curry {
     background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
     background-position: center center;
     background-size: cover;
   }
   //球星列表
-  :hover .img_back004 {
+  :hover .img_back_westbrook {
     background-image: url(../../nbaWeb/PNG-images-NBA-Players-58png.png);
     background-position: bottom center;
     background-size: none;
     background-repeat: no-repeat;
   }
-  :hover .img_back005 {
+  :hover .img_back_irving {
     background-image: url(../../nbaWeb/PNG-images-NBA-Players-60png.png);
     background-position: bottom center;
     background-size: fill;
     background-repeat: no-repeat;
   }
-  :hover .img_back006 {
+  :hover .img_back_wall {
     background-image: url(../../nbaWeb/PNG-images-NBA-Players-70png.png);
     background-position: bottom center;
     background-size: cover;
