--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13247,6 +13247,26 @@ textarea.form-control-lg {
     opacity: 100%;
   }
 }
+.love_img:hover {
+  opacity: 50%;
+}
+
+.img_relative {
+  position: relative !important;
+  display: flex !important;
+}
+
+.love_img_back {
+  background-image: url("../../nbaWeb/Minimal-Magnifying-Glass.svg");
+  width: 250px;
+  height: 250px;
+  position: absolute !important;
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-self: center;
+  justify-content: center !important;
+}
+
 .new_product_img {
   width: 100%;
   height: 312px;
@@ -13258,7 +13278,7 @@ textarea.form-control-lg {
   display: none;
 }
 
-.card:hover .new_product_img {
+.product_hover:hover .new_product_img {
   display: block;
   display: flex;
   flex-direction: column;
