--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13151,15 +13151,135 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@media (max-width: 1040px) {
+  .allstar_banner {
+    height: 400px !important;
+    background-position: top center !important;
+    background-size: none !important;
+  }
+}
+.allstar_bg {
+  background-image: url(../../nbaWeb/CGCJtcwUoAAQX8_.jpg);
+  width: 200px;
+  height: 200px;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 1185px) {
+  .allstar_bg {
+    width: 400px;
+    height: 400px;
+  }
+  .allstartext_rwd {
+    font-size: 32px;
+  }
+  .allstartext_rwd .br {
+    display: none;
+  }
+}
+.pagination {
+  padding: 30px 0;
+}
+
+.pagination ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 10px 18px;
+  color: #3a3a3a;
+  text-decoration: none;
+  font-size: 20px;
+}
+.pagination a:hover {
+  color: #0253a5;
+}
+.pagination a:active {
+  color: #0253a5;
+}
+
+.allstaritem_back {
+  border-radius: 2%;
+  height: 424px;
+}
+
+.small_card:hover .card {
+  box-shadow: 0 20px 20px rgba(221, 221, 221, 0.8666666667);
+}
+.small_card:hover .btn-nbaBlue {
+  background-color: var(--bs-btn-active-bg);
+  border-color: var(--bs-btn-active-border-color);
+}
+
+.btnRwd {
+  width: 90%;
+}
+
+@media (max-width: 1040px) {
+  .imgRwd {
+    left: 40%;
+  }
+  .fsRwd {
+    font-size: 32px;
+  }
+  .btnRwd a {
+    font-size: 48px;
+  }
+}
+@media (min-width: 1040px) {
+  .imgRwd {
+    left: 20%;
+  }
+}
+.aside a {
+  color: #3a3a3a;
+}
+.aside a:active {
+  color: #0253a5 !important;
+}
+.aside a:active .aside_span {
+  display: inline-block !important;
+}
+.aside a:hover {
+  color: #0253a5;
+}
+.aside a .aside_span {
+  color: #0253a5;
+  font-weight: bold;
+  display: none;
+}
+.aside a:hover .aside_span {
+  display: inline-block;
+}
+
+@media (min-width: 768px) {
+  .aside h3, .aside .h3 {
+    text-align: center;
+  }
+}
+.newproduct_margin {
+  margin-top: 104px !important;
+}
+
+.custom_banner {
+  height: 288px;
+}
+
 * {
   font-family: "Rubik", sans-serif;
 }
 
 .navbar {
   position: fixed;
-  z-index: 10;
+  z-index: 9999;
   left: 0;
   right: 0;
+  top: 0;
   margin: 0 auto;
   max-width: 1440px;
   padding: 0 10px;
@@ -13373,123 +13493,4 @@ textarea.form-control-lg {
   .sellbtn_Rwd {
     width: 100%;
   }
-}
-.allstar_banner {
-  height: 600px;
-}
-
-@media (max-width: 768px) {
-  .allstar_banner {
-    background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg) !important;
-    width: 100%;
-    height: 400px;
-    background-position: top center;
-  }
-}
-.allstar_bg {
-  background-image: url(../../nbaWeb/CGCJtcwUoAAQX8_.jpg);
-  width: 200px;
-  height: 200px;
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-@media (max-width: 1185px) {
-  .allstar_bg {
-    width: 400px;
-    height: 400px;
-  }
-  .allstartext_rwd {
-    font-size: 32px;
-  }
-  .allstartext_rwd .br {
-    display: none;
-  }
-}
-.pagination {
-  padding: 30px 0;
-}
-
-.pagination ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.pagination a {
-  display: inline-block;
-  padding: 10px 18px;
-  color: #3a3a3a;
-  text-decoration: none;
-  font-size: 20px;
-}
-.pagination a:hover {
-  color: #0253a5;
-}
-.pagination a:active {
-  color: #0253a5;
-}
-
-.allstaritem_back {
-  border-radius: 2%;
-  height: 424px;
-}
-
-.small_card:hover .card {
-  box-shadow: 0 20px 20px rgba(221, 221, 221, 0.8666666667);
-}
-.small_card:hover .btn-nbaBlue {
-  background-color: var(--bs-btn-active-bg);
-  border-color: var(--bs-btn-active-border-color);
-}
-
-.btnRwd {
-  width: 90%;
-}
-
-@media (max-width: 1040px) {
-  .imgRwd {
-    left: 40%;
-  }
-  .fsRwd {
-    font-size: 32px;
-  }
-  .btnRwd a {
-    font-size: 48px;
-  }
-}
-@media (min-width: 1040px) {
-  .imgRwd {
-    left: 20%;
-  }
-}
-.aside a {
-  color: #3a3a3a;
-}
-.aside a:active {
-  color: #0253a5 !important;
-}
-.aside a:active .aside_span {
-  display: inline-block !important;
-}
-.aside a:hover {
-  color: #0253a5;
-}
-.aside a .aside_span {
-  color: #0253a5;
-  font-weight: bold;
-  display: none;
-}
-.aside a:hover .aside_span {
-  display: inline-block;
-}
-
-@media (min-width: 768px) {
-  .aside h3, .aside .h3 {
-    text-align: center;
-  }
-}
-.custom_banner {
-  height: 288px;
 }/*# sourceMappingURL=main.css.map */
