--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -8,9 +8,10 @@
 
 .navbar {
   position: fixed;
-  z-index: 10;
+  z-index: 9999;
   left: 0;
   right: 0;
+  top: 0;
   margin: 0 auto;
   max-width: 1440px;
   padding: 0 10px;
