--- a/stylesheets/pages/_rank.scss
+++ b/stylesheets/pages/_rank.scss
@@ -3,15 +3,12 @@
 @import "../helpers/variables";
 
 // 嘗試 背景圖如果只使用一次，可以使用 inline style 但會無法響應式 故需要 !important
-.allstar_banner {
-  height: 600px;
-}
-@include maxpad() {
+@include maxpc() {
   .allstar_banner {
-    background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg) !important;
-    width: 100%;
-    height: 400px;
-    background-position: top center;
+    // background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg) !important;
+    height: 400px !important;
+    background-position: top center !important;
+    background-size: none !important;
   }
 }
 
