--- a/stylesheets/pages/_rank.scss
+++ b/stylesheets/pages/_rank.scss
@@ -5,10 +5,8 @@
 // 嘗試 背景圖如果只使用一次，可以使用 inline style 但會無法響應式 故需要 !important
 @include maxpc() {
   .allstar_banner {
-    // background-image: url(../../nbaWeb/160121164737-all-star-starters-graphic-1280-012116.home-t3.jpg) !important;
-    height: 400px !important;
-    background-position: top center !important;
-    background-size: none !important;
+    background-image: url(../../nbaWeb/allstar-update-756.png) !important;
+    height: 600px !important;
   }
 }
 
