--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13492,4 +13492,25 @@ textarea.form-control-lg {
   .sellbtn_Rwd {
     width: 100%;
   }
+}
+.animated_right {
+  opacity: 0;
+  transition: all 1.5s;
+  transform: translateX(50px);
+}
+
+.fadeIn_right {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.animated_down {
+  opacity: 0;
+  transition: all 2.5s;
+  transform: translateY(50px);
+}
+
+.fadeIn_down {
+  opacity: 1;
+  transform: translateY(0);
 }/*# sourceMappingURL=main.css.map */
