修正：pages上圖片的路徑

--- a/stylesheets/utils/_mix.scss
+++ b/stylesheets/utils/_mix.scss
@@ -1,6 +1,6 @@
 @mixin hide_text {
   /* 圖片裝入容器 */
-  background-image: url(../../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
+  background-image: url(../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
   background-repeat: no-repeat;
   background-size: contain;
   /* 圖片取代文字 */
