--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13153,12 +13153,12 @@ textarea.form-control-lg {
 }
 @media (max-width: 1040px) {
   .allstar_banner {
-    background-image: url(../../nbaWeb/allstar-update-756.png) !important;
+    background-image: url(../nbaWeb/allstar-update-756.png) !important;
     height: 600px !important;
   }
 }
 .allstar_bg {
-  background-image: url(../../nbaWeb/CGCJtcwUoAAQX8_.jpg);
+  background-image: url(../nbaWeb/CGCJtcwUoAAQX8_.jpg);
   width: 200px;
   height: 200px;
   background-position: center center;
@@ -13281,7 +13281,7 @@ textarea.form-control-lg {
 }
 .navbar .navbar-brand {
   /* 圖片裝入容器 */
-  background-image: url(../../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
+  background-image: url(../nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg);
   background-repeat: no-repeat;
   background-size: contain;
   /* 圖片取代文字 */
@@ -13383,7 +13383,7 @@ textarea.form-control-lg {
   }
 }
 .love_img_back {
-  background-image: url("../../nbaWeb/Minimal-Magnifying-Glass.svg");
+  background-image: url("../nbaWeb/Minimal-Magnifying-Glass.svg");
   width: 150px;
   height: 150px;
   position: absolute;
@@ -13424,35 +13424,35 @@ textarea.form-control-lg {
   box-shadow: 0 20px 20px rgba(221, 221, 221, 0.8666666667);
 }
 .rank_card :hover .img_back_kobe {
-  background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+  background-image: url(../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
   background-position: center center;
   background-size: cover;
 }
 .rank_card :hover .img_back_lebron {
-  background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
+  background-image: url(../nbaWeb/PNG-images-NBA-Players-3png.png);
   background-position: center center;
   background-size: none;
   background-repeat: no-repeat;
 }
 .rank_card :hover .img_back_curry {
-  background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
+  background-image: url(../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
   background-position: center center;
   background-size: cover;
 }
 .rank_card :hover .img_back_westbrook {
-  background-image: url(../../nbaWeb/PNG-images-NBA-Players-58png.png);
+  background-image: url(../nbaWeb/PNG-images-NBA-Players-58png.png);
   background-position: bottom center;
   background-size: none;
   background-repeat: no-repeat;
 }
 .rank_card :hover .img_back_irving {
-  background-image: url(../../nbaWeb/PNG-images-NBA-Players-60png.png);
+  background-image: url(../nbaWeb/PNG-images-NBA-Players-60png.png);
   background-position: bottom center;
   background-size: fill;
   background-repeat: no-repeat;
 }
 .rank_card :hover .img_back_wall {
-  background-image: url(../../nbaWeb/PNG-images-NBA-Players-70png.png);
+  background-image: url(../nbaWeb/PNG-images-NBA-Players-70png.png);
   background-position: bottom center;
   background-size: cover;
 }
