--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -101,7 +101,7 @@
 // }
 .love_img_back {
   // 可用BS提供的SVG圖 但關機BUG而載圖
-  background-image: url("../../nbaWeb/Minimal-Magnifying-Glass.svg");
+  background-image: url("../nbaWeb/Minimal-Magnifying-Glass.svg");
   width: 150px;
   height: 150px;
   position: absolute;
@@ -145,36 +145,36 @@
     box-shadow: 0 20px 20px $shadow;
   }
   :hover .img_back_kobe {
-    background-image: url(../../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
+    background-image: url(../nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg);
     background-position: center center;
     background-size: cover;
   }
   :hover .img_back_lebron {
-    background-image: url(../../nbaWeb/PNG-images-NBA-Players-3png.png);
+    background-image: url(../nbaWeb/PNG-images-NBA-Players-3png.png);
     background-position: center center;
     background-size: none;
     background-repeat: no-repeat;
   }
   :hover .img_back_curry {
-    background-image: url(../../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
+    background-image: url(../nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg);
     background-position: center center;
     background-size: cover;
   }
   //球星列表
   :hover .img_back_westbrook {
-    background-image: url(../../nbaWeb/PNG-images-NBA-Players-58png.png);
+    background-image: url(../nbaWeb/PNG-images-NBA-Players-58png.png);
     background-position: bottom center;
     background-size: none;
     background-repeat: no-repeat;
   }
   :hover .img_back_irving {
-    background-image: url(../../nbaWeb/PNG-images-NBA-Players-60png.png);
+    background-image: url(../nbaWeb/PNG-images-NBA-Players-60png.png);
     background-position: bottom center;
     background-size: fill;
     background-repeat: no-repeat;
   }
   :hover .img_back_wall {
-    background-image: url(../../nbaWeb/PNG-images-NBA-Players-70png.png);
+    background-image: url(../nbaWeb/PNG-images-NBA-Players-70png.png);
     background-position: bottom center;
     background-size: cover;
   }
