--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -61,7 +61,7 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"); //font-awesome文字格式icon 可連動
 
 //第三方CSS
-@import "../node_modules/lightbox2/dist/css/lightbox.min.css";
+@import "./lightbox.min.css"; //透過 npm 安裝 Lightbox 後，將 lightbox.min.js、lightbox.min.css 及 lightbox 圖片直接複製到其他資料夾，再引入使用
 
 //學生pages
 @import "./pages/rank";
