--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,7 +2,7 @@
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
-@import "../node_modules/lightbox2/dist/css/lightbox.min.css";
+@import "./lightbox.min.css";
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
