--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -13,15 +13,21 @@
   right: 0;
   top: 0;
   margin: 0 auto;
-  max-width: 1440px;
   padding: 0 10px;
+  .container-fluid {
+    max-width: 1440px;
+  }
+  .d-flex:hover .nav_h1 {
+    color: $nbaRed;
+  }
   .navbar-brand {
     @include hide_text;
     width: 50px;
     height: 50px;
-    :hover .nav_h1 {
-      color: $nbaRed !important;
-    }
+    // 你這段意思是 .navbar-brand:hover 的內部 .nav_h1 但 .nav_h1 不在 .navbar-brand 內 (只能背才能連動)
+    // :hover .nav_h1 {
+    //   color: $nbaRed;
+    // }
   }
   .nav_h1 {
     color: $black;
@@ -187,31 +193,54 @@
     background-color: $white;
     border-radius: 3%;
   }
-  .card-text {
-    white-space: nowrap; /*段落不自動換行*/
-    overflow: hidden; /*超過寬度隱藏*/
-    text-overflow: ellipsis; /*文字省略號*/
-    height: 80px;
-    -webkit-line-clamp: 2;
-    display: box;
-    -webkit-box-orient: vertical;
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 0;
   }
-  .rank_a:after {
-    content: "";
-    position: absolute;
-    top: 88%;
-    left: 10%;
-    background: $gray-500;
-    width: 80%;
-    height: 1px;
+  // 建議可以顯示三行（讓它自動斷行），多的部分隱藏即可，另外多行無法使用 `...` 喔
+  .card-text {
+    white-space: wrap; /*段落自動換行*/
+    overflow: hidden; /*超過寬度隱藏*/
+    // text-overflow: ellipsis; /*文字省略號*/
+    height: 75px;
+    margin-bottom: 0;
+  }
+  // stretched-link 這個原理是使用偽元素，你把它覆蓋掉了勒
+  // .rank_a:after {
+  .rank_a {
+    //   content: "";
+    //   position: absolute;
+    //   top: 88%;
+    //   left: 10%;
+    //   background: $gray-500;
+    //   width: 80%;
+    //   height: 1px;
+    border-top: 1px $gray-500 solid;
+    padding-top: 10px;
   }
 }
 @include sellbtn_Rwd;
 
+// 不需要所有元素都在 container 內，背景也是需要設計的
+.talent {
+  max-width: 3000px;
+}
+
+.custom_img_after.active {
+  background-image: url(../nbaWeb/1652102106slam-dunk-silhouette-basketball.svg);
+}
+
+.footer {
+  // max-width: 1440px;
+  // margin: 0 auto;
+}
+
 //視差浮現(右左)
 .animated_right {
   opacity: 0;
-  transition: all 1.5s;
+  transition: all 2s;
   transform: translateX(50px);
 }
 .fadeIn_right {
